--- a/blogs.css
+++ b/blogs.css
@@ -104,7 +104,7 @@ pre {
 
 /*引言样式*/
 blockquote {
-    border-left: 5px solid #fd6d0dd1;
+    border-left: 5px solid #55895B;
 }
 
 /*
@@ -126,14 +126,6 @@ blockquote {
     margin-left: 0;
 }
 
-#blogTitle h2 {
-    margin-left: 0;
-    width: 100%;
-    font-size: 20px;
-    font-weight: bold;
-    color: #000;
-}
-
 /*博客导航栏 */
 #navList {
     float: left;
@@ -146,14 +138,6 @@ blockquote {
 
 .blogStats {
     display: none;
-}
-
-/*
-设置背景色和字体大小 
-*/
-
-body {
-    font-size: 15px;
 }
 
 /*
@@ -179,12 +163,13 @@ sideBar博客侧边栏容器
     height: 50px;
     line-height: 50px;
     text-indent: 0.5em;
-    background: url(http://www.cnblogs.com/skins/red_autumnal_leaves/images/titlebg.png) no-repeat left center;
+    background: url(http://www.cnblogs.com/skins/red_autumnal_leaves/images/titlebg.png) no-repeat left center #fff;
     padding: 0 0 0 50px;
-    border-bottom: 1px solid #ddd;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     margin-bottom: 0;
+    border: 1px solid #55895B;
+    border-left-width: 5px;
+    border-radius: 10px;
+    border-right-width: 5px;
 }
 
 #sideBarMain ul {
@@ -210,6 +195,8 @@ sideBar博客侧边栏容器
 
 #profile_block {
     font-size: 15px;
+    padding: 20px;
+    line-height: 1.8;
 }
 
 #profile_block > a:link {
@@ -229,8 +216,9 @@ sideBar博客侧边栏容器
 
 .mySearch #q {
     height: 40px;
-    width: 120px;
+    width: 150px;
     border-radius: 5px;
+    border: 1px solid #ddd;
 }
 
 .mySearch #btnZzk {
@@ -242,6 +230,12 @@ sideBar博客侧边栏容器
     border: none;
     font-size: 15px;
     cursor: pointer;
+}
+
+.div_my_zzk {
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-around;
 }
 
 /*搜索框结束*/
@@ -272,290 +266,10 @@ sideBar博客侧边栏容器
 }
 
 /*日历结束*/
+
 /*侧边评论*/
 li.recent_comment_body {
     line-height: 30px;
-}
-
-/*
-mainContent主体内容容器 
-*/
-#main {
-    display: flex;
-    width: 95%;
-}
-
-#mainContent .forFlow {
-    margin: 0 0 0 310px;
-}
-
-#mainContent {
-    margin: 0 0 0 -310px;
-}
-
-#post_detail {
-    overflow: hidden;
-}
-
-/* 标题title样式 */
-
-#topics .postTitle {
-    font-size: 25px;
-}
-
-/* 主体内容样式 */
-.postBody {
-    padding: 30px 40px;
-}
-
-#cnblogs_post_body {
-    font-size: 15px;
-}
-
-/* 个性签名 */
-#MySignature {
-    box-shadow: 8px 1px 10px #989898;
-    padding: 10px;
-    text-shadow: 1px 1px 1px #FFF;
-    font-size: 17px;
-    border-left: solid 5px #fd6d0dd1;
-    background: #F3F3F3;
-    border-radius: 10px 10px 50% 10px;
-    line-height: 2.4;
-    margin: 40px 0;
-}
-
-#MySignature a {
-    text-decoration: none;
-    color: #4183c4;
-    font-weight: bold;
-}
-
-#MySignature a:hover {
-    text-decoration: underline;
-    color: #f60;
-}
-
-#MySignature span {
-    color: #f60;
-}
-
-/* 关注收藏等几个按钮 */
-#green_channel {
-    padding: 10px;
-    margin: 20px 0;
-    font-size: 15px;
-    width: 400px;
-}
-
-#green_channel a {
-    border-radius: 3px;
-    text-shadow: none;
-    font-weight: normal;
-    box-shadow: none;
-}
-
-/* 禁用下划线 */
-.postBody a:link, .postBody a:visited, .postBody a:active {
-    text-decoration: none;
-}
-
-/* 上一篇下一篇 */
-#post_next_prev {
-    font-size: 14px;
-    color: #535353;
-}
-
-/*
-底部隐藏作者，隐藏推荐和反对 
-*/
-
-#author_profile {
-    display: none;
-}
-
-#div_digg {
-    display: none;
-}
-
-/* 主体内容容器结束 */
-
-/*
-评论
-*/
-/*评论列表*/
-#blog-comments-placeholder {
-    border-radius: 10px;
-    background: #fff;
-    margin: 30px 0;
-}
-
-.feedback_area_title {
-    padding: 0 16px 16px;
-    border-top: none;
-    border-bottom: 1px solid #ddd;
-}
-
-/* 提交评论按钮 */
-#btn_comment_submit {
-    border: solid 1px #fd6d0dd1 !important;
-    width: 90px;
-    height: 40px;
-    color: #fff !important;
-    background-color: #fd6d0dd1 !important;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-/*
-使用了Monokai Sublime的黑色主题皮肤，但是还存在样式冲突，需要自己修改
-这个样式只适合使用makedown编写的博客
-Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-license.org/
-*/
-
-pre {
-    /*控制代码不换行*/
-    white-space: pre;
-    word-wrap: normal;
-}
-
-.cnblogs-markdown .hljs {
-    display: block;
-    overflow: auto;
-    padding: 1.3em 2em !important;
-    font-size: 16px !important;
-    background: #272822 !important;
-    color: #FFF;
-    max-height: 700px;
-}
-
-.hljs,
-.hljs-tag,
-.hljs-subst {
-    color: #f8f8f2;
-}
-
-.hljs-strong,
-.hljs-emphasis {
-    color: #a8a8a2;
-}
-
-.hljs-bullet,
-.hljs-quote,
-.hljs-number,
-.hljs-regexp,
-.hljs-literal,
-.hljs-link {
-    color: #ae81ff;
-}
-
-.hljs-code,
-.hljs-title,
-.hljs-section,
-.hljs-selector-class {
-    color: #a6e22e;
-}
-
-.hljs-strong {
-    font-weight: bold;
-}
-
-.hljs-emphasis {
-    font-style: italic;
-}
-
-.hljs-keyword,
-.hljs-selector-tag,
-.hljs-name,
-.hljs-attr {
-    color: #f92672;
-}
-
-.hljs-symbol,
-.hljs-attribute {
-    color: #66d9ef;
-}
-
-.hljs-params,
-.hljs-class .hljs-title {
-    color: #f8f8f2;
-}
-
-.hljs-string,
-.hljs-type,
-.hljs-built_in,
-.hljs-builtin-name,
-.hljs-selector-id,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-addition,
-.hljs-variable,
-.hljs-template-variable {
-    color: #e6db74;
-}
-
-.hljs-comment,
-.hljs-deletion,
-.hljs-meta {
-    color: #75715e;
-}
-
-/* 黑色主题makedown代码结束 */
-
-/*makedown行间代码样式 */
-.cnblogs-markdown code {
-    color: #c7254e;
-    border: none !important;
-    font-size: 1em !important;
-    background-color: transparent !important;
-    font-family: sans-serif !important;
-}
-
-/*引言样式*/
-blockquote {
-    border-left: 5px solid #fd6d0dd1;
-}
-
-/*
-博客顶部容器
-包括标题、副标题、导航栏
-*/
-
-/* 博客标题和副标题 */
-
-#blogTitle {
-    overflow: hidden;
-    height: auto;
-    text-align: center;
-}
-
-#blogTitle h1 {
-    font-size: 35px;
-    width: 100%;
-    margin-left: 0;
-}
-
-#blogTitle h2 {
-    margin-left: 0;
-    width: 100%;
-    font-size: 20px;
-    font-weight: bold;
-    color: #000;
-}
-
-/*博客导航栏 */
-#navList {
-    float: left;
-}
-
-#navList li {
-    border: none;
-    font-size: 16px;
-}
-
-.blogStats {
-    display: none;
 }
 
 /*
@@ -564,127 +278,16 @@ blockquote {
 
 body {
     font-size: 15px;
-}
-
-/*
-sideBar博客侧边栏容器
- */
-#sideBar {
-    width: 300px;
     box-sizing: border-box;
-    margin-left: 30px;
-    padding: 0;
 }
 
-.newsItem, .catListComment, .catListEssay, .catListView, .catListFeedback,
-#blog-calendar, #sidebar_postcategory, #sidebar_postcategory, #sidebar_postarchive, #sidebar_search {
-    border-radius: 10px;
-    box-shadow: 1px 2px 3px #A7A8AD;
-    background-color: #fff;
-}
-
-#sideBarMain h3,
-.newsItem h3 {
-    font-size: 1.2em;
-    height: 50px;
-    line-height: 50px;
-    text-indent: 0.5em;
-    background: url(http://www.cnblogs.com/skins/red_autumnal_leaves/images/titlebg.png) no-repeat left center;
-    padding: 0 0 0 50px;
-    border-bottom: 1px solid #ddd;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    margin-bottom: 0;
-}
-
-#sideBarMain ul {
-    background-color: #fff;
-    padding: 15px 20px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-#sideBarMain li {
-    line-height: 40px;
-    border-bottom: 1px solid #ddd;
-    font-size: 14px;
-}
-
-/*侧边栏公告*/
-#blog-news > img {
-    /*头像*/
-    display: block;
-    margin: auto;
-    border-radius: 50%;
-}
-
-#profile_block {
-    font-size: 15px;
-}
-
-#profile_block > a:link {
-    color: #F60;
-}
-
-/*公告结束*/
-
-/*侧边搜索框*/
-.mySearch {
-    padding-bottom: 10px;
-}
-
-.mySearch > div {
-    padding-top: 10px
-}
-
-.mySearch #q {
-    height: 40px;
-    width: 120px;
-    border-radius: 5px;
-}
-
-.mySearch #btnZzk {
-    height: 42px;
-    width: 90px;
-    background: #fd6d0dd1;
-    color: #fff;
-    border-radius: 5px;
-    border: none;
-    font-size: 15px;
-    cursor: pointer;
-}
-
-/*搜索框结束*/
-
-/* 日历 */
-#blog-calendar, #calendar {
-    width: 300px;
-}
-
-#blog-calendar td {
-    padding: 5px 3px;
-    font-size: 14px;
-}
-
-#blog-calendar td a {
+#blogTitle h2 {
+    /*博客的标题h2*/
+    margin-left: 0;
+    width: 100%;
+    font-size: 20px;
     font-weight: bold;
-    color: #59a020;
-}
-
-#blog-calendar table a:hover {
-    color: #59a020;
-    text-decoration: underline;
-    background: transparent;
-}
-
-#blog-calendar table u {
-    text-decoration: none;
-}
-
-/*日历结束*/
-/*侧边评论*/
-li.recent_comment_body {
-    line-height: 30px;
+    color: #000;
 }
 
 /*
@@ -711,15 +314,40 @@ mainContent主体内容容器
 
 #topics .postTitle {
     font-size: 25px;
+    padding: 0 40px;
+    border: none;
+    box-sizing: border-box;
+}
+
+#cb_post_title_url {
+    border: 1px solid #55895B;
+    border-left-width: 5px;
+    border-radius: 10px;
+    border-right-width: 5px;
+    background-position: left center;
+    padding: 15px 50px;
+    width: 100%;
+    display: inline-block;
+    box-sizing: border-box;
 }
 
 /* 主体内容样式 */
 .postBody {
-    padding: 30px 40px;
+    padding: 20px 40px;
 }
 
 #cnblogs_post_body {
     font-size: 15px;
+}
+
+#cnblogs_post_body h2 {
+    border-left: 5px solid #55895B;
+    padding-left: 20px;
+    line-height: 2;
+}
+
+#topics .postDesc {
+    display: none;
 }
 
 /* 个性签名 */
@@ -728,7 +356,7 @@ mainContent主体内容容器
     padding: 10px;
     text-shadow: 1px 1px 1px #FFF;
     font-size: 17px;
-    border-left: solid 5px #fd6d0dd1;
+    border-left: solid 5px #55895B;
     background: #F3F3F3;
     border-radius: 10px 10px 50% 10px;
     line-height: 2.4;
@@ -788,8 +416,6 @@ mainContent主体内容容器
     display: none;
 }
 
-/* 主体内容容器结束 */
-
 /*
 评论
 */
@@ -797,13 +423,16 @@ mainContent主体内容容器
 #blog-comments-placeholder {
     border-radius: 10px;
     background: #fff;
-    margin: 30px 0;
+    padding: 30px 40px;
 }
 
 .feedback_area_title {
-    padding: 0 16px 16px;
-    border-top: none;
-    border-bottom: 1px solid #ddd;
+    background: url(//www.cnblogs.com/skins/red_autumnal_leaves/images/titlebg.png) no-repeat left center #fff;
+    border: 1px solid #55895B;
+    border-left-width: 5px;
+    border-radius: 10px;
+    border-right-width: 5px;
+    padding: 15px 50px;
 }
 
 /* 提交评论按钮 */
