--- a/main.css
+++ b/main.css
@@ -107,13 +107,8 @@ blockquote {
     border-left: 5px solid #55895B;
 }
 
-/*
-博客顶部容器
-包括标题、副标题、导航栏
-*/
-
+/*博客顶部容器包括标题、副标题、导航栏*/
 /* 博客标题和副标题 */
-
 #blogTitle {
     overflow: hidden;
     height: auto;
@@ -124,6 +119,14 @@ blockquote {
     font-size: 35px;
     width: 100%;
     margin-left: 0;
+}
+
+#blogTitle h2 {
+    margin-left: 0;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+    color: #000;
 }
 
 /*博客导航栏 */
@@ -140,9 +143,7 @@ blockquote {
     display: none;
 }
 
-/*
-sideBar博客侧边栏容器
- */
+/*sideBar博客侧边栏容器*/
 #sideBar {
     width: 300px;
     box-sizing: border-box;
@@ -157,8 +158,7 @@ sideBar博客侧边栏容器
     background-color: #fff;
 }
 
-#sideBarMain h3,
-.newsItem h3 {
+#sideBarMain h3, .newsItem h3 {
     font-size: 1.2em;
     height: 50px;
     line-height: 50px;
@@ -267,32 +267,14 @@ sideBar博客侧边栏容器
 
 /*日历结束*/
 
-/*侧边评论*/
-li.recent_comment_body {
-    line-height: 30px;
-}
-
-/*
-设置背景色和字体大小
-*/
+/*设置背景色和字体大小*/
 
 body {
     font-size: 15px;
     box-sizing: border-box;
 }
 
-#blogTitle h2 {
-    /*博客的标题h2*/
-    margin-left: 0;
-    width: 100%;
-    font-size: 20px;
-    font-weight: bold;
-    color: #000;
-}
-
-/*
-mainContent主体内容容器
-*/
+/*mainContent主体内容容器*/
 #main {
     display: flex;
     width: 95%;
@@ -404,10 +386,7 @@ mainContent主体内容容器
     color: #535353;
 }
 
-/*
-底部隐藏作者，隐藏推荐和反对
-*/
-
+/*底部隐藏作者，隐藏推荐和反对*/
 #author_profile {
     display: none;
 }
@@ -416,9 +395,7 @@ mainContent主体内容容器
     display: none;
 }
 
-/*
-评论
-*/
+/*评论*/
 /*评论列表*/
 #blog-comments-placeholder {
     border-radius: 10px;
@@ -433,6 +410,11 @@ mainContent主体内容容器
     border-radius: 10px;
     border-right-width: 5px;
     padding: 15px 50px;
+}
+
+/*侧边评论*/
+li.recent_comment_body {
+    line-height: 30px;
 }
 
 /* 提交评论按钮 */
