--- a/title-nav.css
+++ b/title-nav.css
@@ -11,6 +11,14 @@
     margin-left: 0;
 }
 
+#blogTitle h2 {
+    margin-left: 0;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+    color: #000;
+}
+
 /*博客导航栏 */
 #navList {
     float: left;
