--- a/body.css
+++ b/body.css
@@ -82,8 +82,23 @@ body {
 #cnblogs_post_body h2 {
     /*标题h2*/
     border-left: 5px solid #55895B;
-    padding-left: 20px;
+    padding: 10px 20px;
     line-height: 2;
+    background: #d6dbdf8a;
+    margin: 30px 0;
+    font-size: 25px;
+}
+
+#cnblogs_post_body h3 {
+    margin: 20px 0;
+    padding: 10px 20px;
+    border-left: 5px solid #55895B;
+    font-size: 20px;
+}
+
+#cnblogs_post_body h4{
+    font-size: 18px;
+    margin: 20px 0;
 }
 
 #topics .postDesc {
